# glitchup

./: .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  Options.toml  Q&A.md  README.md  SELFNOTES.md  TUTORIAL.md  ffmpeg.txt  foo.txt  foo_iter=1.txt  nice.rs  options.toml  temp.toml  test.rs
examples/: basic_mutation.rs  benders.rs
glitchup_derive/: CHANGELOG.md  Cargo.toml  README.md
glitchup_derive/examples/: basic_mutation.rs  bender.rs  benders.rs  foo.txt  foo_iter=1.txt
glitchup_derive/src/: lib.rs
images/: demo.tif
src/: basic_mutation.rs  benders.rs  configuration.rs  lib.rs  loaders.rs  main.rs  mutation.rs  mutations.rs  opt_processor.rs  options.rs
src/mutations/: basic_mutation.rs  chaos.rs  compress.rs  gradient.rs  increase.rs  loops.rs  mod.rs  multiply.rs  rainbow.rs  reverse.rs  shift.rs  shuffle.rs  swap.rs  void.rs
src/sample/: mod.rs
test/: basic.rs
tests/: foo.txt  memmap_test.rs  temp_tests.rs
