[package]
name = "glitchup"
version = "0.1.0"
authors = ["Calmynt <mctech26@gmail.com>"]
edition = "2018"

[lib]
name = "glitchconsole"
path = "src/lib.rs"

[[bin]]
name = "glitchup"
path = "src/main.rs"

[dependencies]
memmap = "0.7.0"
rand = "0.7.0"
toml = "0.5.1"
serde = {version = "1.0.97", features = ["derive"]}
glitchup_derive = {path = "glitchup_derive"}