[package]
name = "glitchup"
description = "A databending library/executable in Rust!"
version = "0.4.2"
license = "MPL-2.0"
repository = "https://github.com/Calmynt/glitchup"
readme = "README.md"
keywords = ["databending", "glitch", "corrupt", "glitchup"]
authors = ["Calmynt <mctech26@gmail.com>"]
edition = "2018"
maintenance = { status = "actively-developed" }

[[bin]]
name = "glitchup"
path = "src/main.rs"

[dependencies]
memmap = "0.7.0"
rand = "0.7.0"
toml = "0.5.1"
serde = {version = "1.0.97", features = ["derive"]}
rand_xorshift = "0.2"
rayon = "1.2.0"
rand_core = "0.5"
moveslice = "2.0.1"
cfgmap = {version = "0.2.3", features = ["from_toml", "generator"]}
